--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
+    <meta http-equiv="Content-Type" content="text/html" />
     <meta charset="utf-8" />
+    <meta name="description" content="Дрова в Дзержинске. Заказать дрова на дом. Удобная доставка, фото, качество, гарантия." />
+    <meta name="language" content="ru" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Дрова в Дзержинске — доставка, гарантия, качество, фото." />
+    <meta property="og:description" content="Дрова в Дзержинске. Качество - заботимся о тепле в вашем доме" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://lesaka.by"/>
+    <meta property="og:site_name" content="lesaka.by"/>
+    <meta property="og:locale" content="ru"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Дрова колотые</title>
+    <title>Дрова в Дзержинске - доставка в Дзержинский, Минский районы</title>
   </head>
   <body>
     <div id="root"></div>
